src/objects/Student__c.object
<CustomObject>
    <description>This object stores information about CRJ students.</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Year__c</fullName>
        <description>The grade of the student.</description>
        <inlineHelpText>The graduation year for the student</inlineHelpText>
        <label>Class Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_End_of_Year_Eval__c</fullName>
        <label>FR End of Year Eval</label>
        <picklist>
            <picklistValues>
                <fullName>5 - consistently exceeds exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - occasionally exceeds exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - meets exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - occasionally does not meet exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - rarely meets exp.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_Mid_Year_Eval__c</fullName>
        <label>FR Mid Year Eval</label>
        <picklist>
            <picklistValues>
                <fullName>5 - consistently exceeds exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - occasionally exceeds exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - meets exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - occasionally does not meet exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - rarely meets exp.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_Sponsor_End__c</fullName>
        <label>FR Sponsor End</label>
        <picklist>
            <picklistValues>
                <fullName>Current Sponsor</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FR_Sponsor_Mid__c</fullName>
        <label>FR Sponsor Mid</label>
        <picklist>
            <picklistValues>
                <fullName>Current Sponsor</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>The first name of the student.</description>
        <label>First Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>Grade level</description>
        <label>Grade</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Graduate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the student has graduated.</description>
        <label>Graduate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <label>Home Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoming_Pref_1__c</fullName>
        <description>The incoming student&apos;s preference for what industry they in which the prefer to work.</description>
        <label>Incoming Pref 1</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting/IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service / Non-profit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incoming_Pref_2__c</fullName>
        <label>Incoming Pref 2</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting/IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service / Non-profit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incoming_Pref_3__c</fullName>
        <label>Incoming Pref 3</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting/IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service / Non-profit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsWorking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsWorking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JR_End_of_Year_Eval__c</fullName>
        <label>JR End of Year Eval</label>
        <picklist>
            <picklistValues>
                <fullName>5 - consistently exceeds exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - occasionally exceeds exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - meets exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - occasionally does not meet exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - rarely meets exp.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JR_Mid_Year_Eval__c</fullName>
        <label>JR Mid Year Eval</label>
        <picklist>
            <picklistValues>
                <fullName>5 - consistently exceeds exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - occasionally exceeds exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - meets exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - occasionally does not meet exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - rarely meets exp.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JR_Pref_1__c</fullName>
        <description>Rising junior&apos;s industry preference</description>
        <label>JR Pref 1</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting/IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service / Non-profit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JR_Pref_2__c</fullName>
        <label>JR Pref 2</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting/IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service / Non-profit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JR_Pref_3__c</fullName>
        <label>JR Pref 3</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting/IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service / Non-profit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JR_Sponsor_End__c</fullName>
        <label>JR Sponsor End</label>
        <picklist>
            <picklistValues>
                <fullName>Current Sponsor</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JR_Sponsor_Mid__c</fullName>
        <label>JR Sponsor Mid</label>
        <picklist>
            <picklistValues>
                <fullName>Current Sponsor</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name_Init__c</fullName>
        <description>Middle name or initial</description>
        <inlineHelpText>Please enter middle name or initial, if desired.</inlineHelpText>
        <label>Middle Name/Init</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Reason_1__c</fullName>
        <inlineHelpText>Why did the student leave Past Sponsor 1?</inlineHelpText>
        <label>Past Reason 1</label>
        <picklist>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved by CWSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Past_Reason_2__c</fullName>
        <description>The reason why student left the past sponsor.</description>
        <label>Past Reason 2</label>
        <picklist>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved by CWSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Past_Reason_3__c</fullName>
        <label>Past Reason 3</label>
        <picklist>
            <picklistValues>
                <fullName>Terminated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moved by CWSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Year</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Past_Sponsor_1_Grade__c</fullName>
        <label>Past Sponsor 1 Grade</label>
        <picklist>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Past_Sponsor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Past Sponsor 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Past Students</relationshipLabel>
        <relationshipName>Students5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Past_Sponsor_2_Grade__c</fullName>
        <label>Past Sponsor 2 Grade</label>
        <picklist>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Past_Sponsor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Past Sponsor 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Past Students</relationshipLabel>
        <relationshipName>Students6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Past_Sponsor_3_Grade__c</fullName>
        <label>Past Sponsor 3 Grade</label>
        <picklist>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Past_Sponsor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Past Sponsor 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Past Students</relationshipLabel>
        <relationshipName>Students7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PowerSchool_Number__c</fullName>
        <description>PowerSchool Student Number</description>
        <label>PowerSchool Number</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SO_End_of_Year_Eval__c</fullName>
        <label>SO End of Year Eval</label>
        <picklist>
            <picklistValues>
                <fullName>5 - consistently exceeds exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - occasionally exceeds exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - meets exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - occasionally does not meet exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - rarely meets exp.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SO_Mid_Year_Eval__c</fullName>
        <label>SO Mid Year Eval</label>
        <picklist>
            <picklistValues>
                <fullName>5 - consistently exceeds exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - occasionally exceeds exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - meets exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - occasionally does not meet exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - rarely meets exp.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SO_Pref_1__c</fullName>
        <description>Rising sophomore&apos;s industry preferences</description>
        <label>SO Pref 1</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting/IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service / Non-profit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SO_Pref_2__c</fullName>
        <label>SO Pref 2</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting/IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service / Non-profit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SO_Pref_3__c</fullName>
        <label>SO Pref 3</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting/IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service / Non-profit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SO_Sponsor_End__c</fullName>
        <label>SO Sponsor End</label>
        <picklist>
            <picklistValues>
                <fullName>Current Sponsor</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SO_Sponsor_Mid__c</fullName>
        <label>SO Sponsor Mid</label>
        <picklist>
            <picklistValues>
                <fullName>Current Sponsor</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SR_End_of_Year_Eval__c</fullName>
        <label>SR End of Year Eval</label>
        <picklist>
            <picklistValues>
                <fullName>5 - consistently exceeds exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - occasionally exceeds exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - meets exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - occasionally does not meet exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - rarely meets exp.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SR_Mid_Year_Eval__c</fullName>
        <description>The student&apos;s midyear evaluation.</description>
        <label>SR Mid Year Eval</label>
        <picklist>
            <picklistValues>
                <fullName>5 - consistently exceeds exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - occasionally exceeds exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - meets exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - occasionally does not meet exp.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - rarely meets exp.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SR_Pref_1__c</fullName>
        <description>Rising senior&apos;s industry preferences</description>
        <label>SR Pref 1</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting/IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service / Non-profit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SR_Pref_2__c</fullName>
        <label>SR Pref 2</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting/IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service / Non-profit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SR_Pref_3__c</fullName>
        <label>SR Pref 3</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting/IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service / Non-profit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SR_Sponsor_End__c</fullName>
        <label>SR Sponsor End</label>
        <picklist>
            <picklistValues>
                <fullName>Current Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Sponsor 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>